Closed Bug 505263 Opened 17 years ago Closed 16 years ago

Autocomplete window doesn't always close on its own

Categories

(Camino Graveyard :: Location Bar & Autocomplete, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino2.1

People

(Reporter: stuart.morgan+bugzilla, Assigned: dan.j.weber)

References

Details

(Keywords: regression)

Attachments

(1 file)

3.93 KB, patch
stuart.morgan+bugzilla
: review+
mikepinkerton
: superreview+
Details | Diff | Splinter Review
I've seen the autocomplete window fail to close a number of times now when entering a URL. I don't have firm STR, but I can reproduce it semi-frequently if I type "gmail", hit Return as soon as the autocomplete window opens, then immediately hit command-L and type gmail again, and repeat. I can always dismiss it manually once it sticks open, so it's not a serious problem, but it's definitely a regression from the old autocomplete list.
I first noted a similar behaviour in the forums: http://forums.mozillazine.org/viewtopic.php?p=6983935#p6983935 I hadn't seen it anymore, till now. In both cases, the issue happened when typing the keyword for a tabgroup and hitting return. In both cases the keyword is the same as the the first few characters of (one) of the URLs in the tabgroup 'news' for a tabgroup that contains news.bbc.co.uk 'bug', a tabgroup with bugzilla search queries (bugzilla.m.o). But I can't reproduce this on demand.
I'm seeing a similar thing tonight, though in my case the window is appearing on its own; I can't reproduce it 100% of the time, but the steps are something like: 1) Cmd-L, start typing something (e.g., adobe.com) 2) Wait for the autocomplete window to come up, see there's nothing there 3) Return to accept my typing and go to that site 4) Cmd-L after the site loads ER: Location bar focused AR: Location bar focused and autocomplete window appears Hmm, now that I've crashed http://pastebin.mozilla.org/664519 while trying to reproduce it more regularly, I can't reproduce it at all :/
OK, now I just had it happen again, this time between step 3 and 4 :P
I seem to have forgotten to mention that I can repro this pretty reliably with the following STR: 1) Paste a URL into the location bar 2) Return 3) There is no step 3 I believe it is also related to my "large" history db, since I can't easily repro with a fresh profile.
This is the other bug that I think makes the current impl look bad.
Flags: camino2.1a1?
Attached patch Patch 1Splinter Review
Been a while since I submitted a patch, hope I did this right. Anyway, I took out the NSTimer that was used before to delay the popup window for autocomplete results. The previous comments indicated it was necessary to prevent "flickering". I'm not sure why it would flicker and I haven't seen any flickering with this fix in place. I'm not 100% sure the timer was the cause of this bug, but I strongly suspect it was and I haven't been able to reproduce it with this patch. One additional benefit of getting rid of the timer is that autocomplete seems snappier because it opens right away. Note: if you have more than ~3k history item or bookmarks, autocomplete is still extremely slow. I'm still working on that part.
Attachment #422802 - Flags: review?(stuart.morgan+bugzilla)
Comment on attachment 422802 [details] [diff] [review] Patch 1 The patch introduces whitespace on blank lines, and uses a tab instead of spaces on one of the lines. With those fixed, r=me.
Attachment #422802 - Flags: superreview?(mikepinkerton)
Attachment #422802 - Flags: review?(stuart.morgan+bugzilla)
Attachment #422802 - Flags: review+
Attachment #422802 - Flags: superreview?(mikepinkerton) → superreview+
I fixed the whitespace/tabs issues Stuart mentioned in comment 8 and landed this on cvs trunk. AutoCompleteTextField.mm needs a thorough spaces-on-blank-lines cleanup, though: bug 544814
Status: NEW → RESOLVED
Closed: 16 years ago
Flags: camino2.1a1? → camino2.1a1+
Resolution: --- → FIXED
Target Milestone: --- → Camino2.1
I just saw this again in my 1.9.2 build, with the following STR: 1) Start typing something in the location field (something not in history in this case, flashblock.mozdev.org) 2) Hit return 3) There is no step 3 When the site loads, the autocomplete window re-appears. It's possible this is an artifact of the 1.9.2 build, but it might still exist in 2.1a1pre, too :(
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: