Bug 505263 - Autocomplete window doesn't always close on its own. Patch by Dan Weber <dan.j.weber@gmail.com>, r=smorgan, sr=pink